--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,14 +8,29 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: url("/background.png");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 10px solid #000;
+}
+
+.App-municipal {
+  border-color: pink;
+}
+
+.App-regional {
+  border-color: red;
+}
+
+.App-national {
+  border-color: yellow;
+}
+
+.App-continental {
+  border-color: blue;
 }
 
 .App-link {
