--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,19 +17,19 @@
   border: 10px solid #000;
 }
 
-.App-municipal {
+.App-pinktemplate {
   border-color: pink;
 }
 
-.App-regional {
+.App-redtemplate {
   border-color: red;
 }
 
-.App-national {
+.App-yellowtemplate {
   border-color: yellow;
 }
 
-.App-continental {
+.App-bluetemplate {
   border-color: blue;
 }
 
@@ -46,46 +46,50 @@
   }
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .p-menuitem-link {
-    border: 1px solid #c8c8c8;
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem {
+    float: none;
 }
 
 body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .p-menuitem-link .p-menuitem-text {
     color: #333333;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
-    border: 1px solid #c8c8c8;
-}
-
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-municipal {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-pinktemplate {
     background-color: pink;
+    border-color: pink;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-municipal {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-pinktemplate {
     background-color: pink;
+    border-color: pink;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-regional {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-redtemplate {
     background-color: red;
+    border-color: red;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-regional {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-redtemplate {
     background-color: red;
+    border-color: red;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-national {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-yellowtemplate {
     background-color: yellow;
+    border-color: yellow;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-national {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-yellowtemplate {
     background-color: yellow;
+    border-color: yellow;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-continental {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem.p-highlight .App-bluetemplate {
     background-color: blue;
+    border-color: blue;
 }
 
-body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-continental {
+body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-bluetemplate {
     background-color: blue;
+    border-color: blue;
 }
