--- a/frontend/src/mock/templates/Yellow.css
+++ b/frontend/src/mock/templates/Yellow.css
@@ -22,4 +22,5 @@ body .App-yellowtemplate .p-button .pi {
 
 body .App-yellowtemplate .p-button.p-button-text-icon-left .p-button-text {
     top: 10%;
+    left: 25%;
 }
