--- a/frontend/src/mock/templates/Pink.css
+++ b/frontend/src/mock/templates/Pink.css
@@ -21,5 +21,6 @@ body .App-pinktemplate .p-button .pi {
 }
 
 body .App-pinktemplate .p-button.p-button-text-icon-left .p-button-text {
-    top: 30%;
+    top: 20%;
+    left: 20%;
 }
