--- a/frontend/src/mock/templates/Pink.css
+++ b/frontend/src/mock/templates/Pink.css
@@ -24,3 +24,13 @@ body .App-pinktemplate .p-button.p-button-text-icon-left .p-button-text {
     top: 20%;
     left: 20%;
 }
+
+body .App-pinktemplate .content-party {
+    display: grid;
+}
+
+body .App-pinktemplate .first-row {
+    grid-column: 1 / 3;
+    width: 98.7%;
+    height: 100%;
+}
