--- a/frontend/src/mock/templates/Yellow.css
+++ b/frontend/src/mock/templates/Yellow.css
@@ -24,3 +24,13 @@ body .App-yellowtemplate .p-button.p-button-text-icon-left .p-button-text {
     top: 10%;
     left: 25%;
 }
+
+body .App-yellowtemplate .content-party {
+    display: grid;
+}
+
+body .App-yellowtemplate .first-row {
+    grid-column: 1 / 3;
+    width: 99%;
+    height: 100%;
+}
