--- a/frontend/src/mock/templates/Red.css
+++ b/frontend/src/mock/templates/Red.css
@@ -33,7 +33,6 @@ body .App-redtemplate .content-party {
 }
 
 body .App-redtemplate .first-row {
-    grid-column: 1 / 3;
-    width: 99.8%;
+    grid-column: 2;
     height: 100%;
 }
