--- a/frontend/src/vote/VotingPaper.css
+++ b/frontend/src/vote/VotingPaper.css
@@ -17,3 +17,7 @@ body .p-button, body .p-buttonset.p-button-secondary > .p-button {
     margin-top: -.1em;
     margin-left: -8px;
 }
+
+body .content-party {
+    float: left;
+}
