--- a/frontend/src/vote/VotingPaper.css
+++ b/frontend/src/vote/VotingPaper.css
@@ -1,10 +1,14 @@
 body .p-button.p-button-secondary, body .p-buttonset.p-button-secondary > .p-button {
     background-color: white;
-    font-size: 12px;
 }
 
 body .p-button.p-button-text-icon-left .p-button-text {
     position: absolute;
+}
+
+body .p-button.p-button-text-icon-left .p-button-subtext {
+    position: absolute;
+    font-size: 8px;
 }
 
 body .p-button, body .p-buttonset.p-button-secondary > .p-button {
