--- a/frontend/src/mock/templates/Yellow.css
+++ b/frontend/src/mock/templates/Yellow.css
@@ -14,6 +14,7 @@ body .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .App-yellowtemplate {
 
 body .App-yellowtemplate .p-button, body .p-buttonset.p-button-secondary > .p-button {
     font-size: 15px;
+    width: 298px;
 }
 
 body .App-yellowtemplate .p-button .pi {
@@ -28,13 +29,13 @@ body .App-yellowtemplate .p-button.p-button-text-icon-left .p-button-text {
 body .App-yellowtemplate .content-party {
     display: grid;
     grid-gap: 1px;
-    padding: 10px;
+    padding: 11px;
     grid-template-columns: 49% 49%;
-    width: 30.9%;
+    width: 50%;
 }
 
 body .App-yellowtemplate .first-row {
     grid-column: 1 / 3;
-    width: 99.8%;
+    width: 100%;
     height: 100%;
 }
