--- a/frontend/src/vote/VotingPaper.css
+++ b/frontend/src/vote/VotingPaper.css
@@ -28,3 +28,8 @@ body .content-party {
     float: left;
     width: 50%;
 }
+
+body .p-inputtext {
+  color: transparent;
+  text-shadow: 0 0 0 black;
+}
