--- a/frontend/src/mock/templates/Red.css
+++ b/frontend/src/mock/templates/Red.css
@@ -66,3 +66,8 @@ body .App-redtemplate .candidates .p-autocomplete .p-inputtext {
     font-size: 13px;
     margin-bottom: 2.2%;
 }
+
+body .App-redtemplate .candidates .number-candidates {
+    position: absolute;
+    right: 60%;
+}
