--- a/frontend/src/mock/templates/Yellow.css
+++ b/frontend/src/mock/templates/Yellow.css
@@ -39,3 +39,11 @@ body .App-yellowtemplate .first-row {
     width: 100%;
     height: 100%;
 }
+
+body .App-yellowtemplate .first-row .button-selected {
+    width: 32%;
+    height: 90%;
+    left: 35%;
+    bottom: 1%;
+    position: absolute;
+}
