--- a/frontend/src/mock/templates/Red.css
+++ b/frontend/src/mock/templates/Red.css
@@ -60,8 +60,7 @@ body .App-redtemplate .candidates {
 }
 
 body .App-redtemplate .candidates .p-autocomplete .p-inputtext {
-    width: 65%;
-    margin-left: 40%;
+    width: 95%;
     border: none;
     font-size: 13px;
     margin-bottom: 2.2%;
@@ -70,4 +69,9 @@ body .App-redtemplate .candidates .p-autocomplete .p-inputtext {
 body .App-redtemplate .candidates .number-candidates {
     position: absolute;
     right: 60%;
+}
+
+body .App-redtemplate .p-autocomplete {
+    left: 20%;
+    width: 60%;
 }
